deployments/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ui
  template:
    metadata:
      labels:
        component: ui
    spec:
      containers:
        - name: ui
          image: choem/graphql-test-ui
          imagePullPolicy: Never
          ports:
            - containerPort: 80
